crates/lang/tests/ui/contract/fail/module-missing-message.stderr
error: missing ink! message
 --> tests/ui/contract/fail/module-missing-message.rs:4:1
  |
4 | mod contract {
  | ^^^
